--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,11 @@
   outline: none;
 }
 
+a, a:visited, a:hover, a:active {
+  text-decoration: none;
+  color: inherit;
+}
+
 .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -213,10 +218,12 @@
 
 .card__terms__link:hover {
   color: #4066A5;
+  text-decoration: underline;
 }
 
 .card__terms__link:active {
   color: #233759;
+  text-decoration: underline;
 }
 
 .card__social-icons {
