--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -182,10 +182,12 @@
 
             &:hover {
                 color: $primary-color;
+                text-decoration: underline;
             }
 
             &:active {
                 color: $link-pressed;
+                text-decoration: underline;
             }
         }
     }
